feat: add octo nvim

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -17,7 +17,8 @@
           "javascriptreact",
           "htmldjango",
           "astro",
-          "blade"
+          "blade",
+          "htmldjango"
         ],
         "path": "./html.json"
       },
